# Edgard_Fernandez_RA2

Proyecto subir github/: .env  Tableau Proyecto.twb  Untitled.ipynb  env.example  main.py
Proyecto subir github/dw_api/: Untitled.ipynb  check_counts.py  cleanup_polymarket_tables.py  db.py  ddl.sql  debug_columns.py  load_csv_to_neon.py  main.py  pyproject.toml
